--- a/frontend/stylesheets/melt-curve.scss
+++ b/frontend/stylesheets/melt-curve.scss
@@ -94,15 +94,15 @@
 			input{
 			outline: none;
 			border: none;
-			// font-family: 'dinot-Regular';
-			// font-size: 16px;
+			font-family: 'dinot-Regular';
+			font-size: 16px;
 			//width: 140px;
 			}
 
-			// .sample-span{
-			// 	font-family: 'dinot-Regular';
-			// 	font-size: 12px;
-			// }
+			.sample-span{
+				font-family: 'dinot-Regular';
+				font-size: 12px;
+			}
 
       th {
         background-color: lighten($gray, 15%);
