--- a/frontend/stylesheets/modal-testkit.scss
+++ b/frontend/stylesheets/modal-testkit.scss
@@ -121,9 +121,9 @@
     background-color: white;
     color: black;
     padding: 6px;
-    // font-size: 16px;
-		// font-family: 'dinot-regular';
-		//font-weight: 300;
+    font-size: 16px;
+		font-family: 'dinot-regular';
+		// font-weight: 300;
     border: none;
     cursor: pointer;
 		width: 450px;
