--- a/frontend/stylesheets/results-charts.scss
+++ b/frontend/stylesheets/results-charts.scss
@@ -2,8 +2,8 @@
 .results-charts {
   .curve-header {
     padding-bottom: 3px;
-    // margin-: 10px;
-    // margin-right: 10px;
+    margin-left: 0px;
+    margin-right: 0px;
     .row {
       margin-top: 0;
       margin-bottom: 0;
