fixed bottom switch-well table over issue

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -148,7 +148,7 @@ limitations under the License.
                               <td class="B1-M-Amplification">{{label_dF_dC}}</td>
                             </tr>
                             <tr>
-                              <td class="B1">d<sup>2</sup>/dc<sup>2</sup>:</td>
+                              <td class="B1-Amplification">d<sup>2</sup>/dc<sup>2</sup>:</td>
                               <td class="B1-M-Amplification">{{label_D2_dc2}}</td>
                             </tr>
                           </table>
@@ -201,7 +201,7 @@ limitations under the License.
                 <span ng-if="is_dual_channel">Cq</span>
                 <span ng-if="!is_dual_channel">Cq</span>
               </th>
-              <th class="B2-Amplification" style="text-align: left; padding-left:0px;" ng-class="{'channel-2': color_by === 'channel'}" style="padding: 10px 5px;">
+              <th class="B2-M-Amplification" style="text-align: left; padding-left:0px;" ng-class="{'channel-2': color_by === 'channel'}">
                 <span ng-if="is_dual_channel" >Cq M</span>
                 <span ng-if="!is_dual_channel" >Cq M</span>
               </th>
