--- a/frontend/stylesheets/directives/chart-well-switch.css.scss
+++ b/frontend/stylesheets/directives/chart-well-switch.css.scss
@@ -35,6 +35,7 @@
   .well-switch {
     min-height: 60px;
     vertical-align: top;
+    position: relative;
 
     &.selected {
       background-color: #e4f4fa;
@@ -45,18 +46,16 @@
     }
 
     &.selected.active {
-      position: fixed;
-
       .well-switch-container {
         // margin: -5px;
+        height: calc(100% + 10px) !important;
         //height: calc(100% + 13px) !important ;
-        height: fit-content !important ;
+        // height: fit-content !important ;
         border: 2px solid #000;
         z-index: 999999;
         position: absolute;
         top: -5px;
         left: -5px;
-        bottom: -3px;
         right: -5px;        
         box-shadow: 0px 0px 5px #000;
         font-weight: bold;
@@ -87,6 +86,5 @@
       justify-content: space-between;
       height: calc(100% - 20px)
     }
-
   }
 }
