--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -88,7 +88,7 @@ limitations under the License.
               </form>
             </div>
           </div>
-          <div class="curve-body" style="padding-right: 0px; height: 100%; display: flex; flex-direction: row; justify-content: space-between;">
+          <div class="curve-body amplification-chart" style="padding-right: 0px; height: 100%; display: flex; flex-direction: row; justify-content: space-between;">
             <div class="curve-plot" aspect-Ratio offset-x='185' offset-y='20' min-width='680' max-width='1020' min-height='400' max-height='600' id="curve-plot" style="display: block;">
               <div style="width:100%; height: 90%;">
                 <div class="chart-container" full-height>
@@ -120,7 +120,7 @@ limitations under the License.
                   <button class="button zoom-button" ng-click="zoomOut()" style="text-align: center; vertical-align: middle; font-size: 20px; margin-left: 32px; padding: 0px; width: 30px;">–</button>
                 </div>
                 <div style="display: grid; width: 100%; height: 100%; align-content: center; vertical-align: middle; text-align: center">
-                   <font class="G1">Cycle Number</font>
+                   <font class="G1" style="font-weight: bold;">Cycle Number</font>
                 </div>                
               </div>
             </div>
