--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -174,9 +174,7 @@ H3-Amplification {
 
 .B2 {
   font-family: "dinot-regular";
-  font-size: 10px;
-  line-height: 15px;
-  font-weight: normal;
+  font-size: 12px;
 }
 
 .B2B {
@@ -184,8 +182,14 @@ H3-Amplification {
   font-size: 12px;
 }
 
+.B2-Amplification {
+  font-family: "dinot-regular";
+  font-size: 10px;
+  line-height: 15px;
+}
+
 .B2-M-Amplification {
-  font-family: "dinot-bold";
+  font-family: "dinot-medium";
   font-size: 10px;
   line-height: 15px;
 }
