--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -20,7 +20,7 @@ limitations under the License.
   <div class="page-layout" ng-controller="AmplificationChartCtrl" ng-show="experiment" style="height: 100%;">
     <div class="content row" style="padding-top:0px; height: 100%; display: flex;" >
       <div class="chart-section col-lg-8 col-md-8 col-sm-6 col-xs-6" offset="0" force="true" style="width: 65%; height:100%; padding-left: 0px; padding-right: 0px; display: flex; flex-direction: column; justify-content: space-between; background: #eeeeee">
-        <div style="height: 80%; display: flex; flex-direction: column;">
+        <div style="height: calc(100% - 180px); display: flex; flex-direction: column;">
             <!--curve-header-->
           <div class="curve-header">
             <div class="curve-name" style="padding-left: 15px;  display: flex; flex-direction: column; justify-content: center;" >
@@ -88,7 +88,7 @@ limitations under the License.
               </form>
             </div>
           </div>
-          <div class="curve-body amplification-chart" style="padding-right: 0px; height: 100%; display: flex; flex-direction: row; justify-content: space-between;">
+          <div class="curve-body amplification-chart" style="height:100%; padding-right: 0px; display: flex; flex-direction: row; justify-content: space-between;">
             <div class="curve-plot" aspect-Ratio offset-x='185' offset-y='20' min-width='680' max-width='1020' min-height='400' max-height='600' id="curve-plot" style="display: block;">
               <div style="width:100%; height: 90%;">
                 <div class="chart-container" full-height>
@@ -183,7 +183,7 @@ limitations under the License.
             </div>
           </div>
         </div>
-        <div class="choose-chart" style="flex-grow: 1; position: relative; height: 20%; min-height: 160px; max-height: 220px;">
+        <div class="choose-chart"  fit-bottom-switch min-height='160' max-height='220' style="position: relative;">
           <chart-well-switch style="position: absolute; height: 100%;" ng-model="wellButtons" color-by="color_by" chart-type="amplification"></chart-well-switch>
         </div>
       </div>
