advanced all issue.

--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -91,7 +91,7 @@ limitations under the License.
           <div class="curve-body amplification-chart" style="height:100%; padding-right: 0px; display: flex; flex-direction: row; justify-content: space-between;">
             <div class="curve-plot" aspect-Ratio offset-x='185' offset-y='20' min-width='680' max-width='1020' min-height='400' max-height='600' id="curve-plot" style="display: block;">
               <div style="width:100%; height: 90%;">
-                <div class="chart-container" full-height>
+                <div class="chart-container" style="height:100%; min-width: 660px; max-width: 1000px; min-height: 340px; max-height: 520px;">
                   <div class="chart-error B1" ng-show="retrying && !fetching && error">
                     <strong class="text-black">Unable to load chart data</strong>
                     <p ng-bind="error"></p>
