--- a/frontend/javascripts/app/views/experiment/experiment-properties-name.html
+++ b/frontend/javascripts/app/views/experiment/experiment-properties-name.html
@@ -25,7 +25,7 @@
     <div class="exp-name-container">
       <p class="exp-name H1" ng-show="!editExpNameMode">{{experiment.name}}</p>
       <textarea class="exp-name H1" required ng-model="experiment.name" ng-show="editExpNameMode" ng-blur="saveExperiment()"
-        on-key-enter="saveExperiment(exp)" focus-on="editExpNameMode" id="exp_name_field" rows="3"></textarea>
+        focus-on="editExpNameMode" id="exp_name_field" rows="3"></textarea>
     </div>
 
     <div class="text-center message-container">
