--- a/frontend/stylesheets/fonts.css.scss
+++ b/frontend/stylesheets/fonts.css.scss
@@ -167,6 +167,27 @@ H3-Amplification {
   font-weight: normal;
 }
 
+.B1v-Amplification {
+  font-family: "dinot-regular";
+  font-size: 13px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.B1Mv-Amplification {
+  font-family: "dinot-medium";
+  font-size: 13px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
+.B1M-Amplification {
+  font-family: "dinot-medium";
+  font-size: 13px;
+  line-height: 25px;
+  font-weight: normal;
+}
+
 .B1B {
   font-family: "dinot-bold";
   font-size: 16px;
