--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -299,6 +299,8 @@
         width: 100%;
         height: 175px;
         overflow: auto;
+        box-shadow: 0 1pt 1pt 1px grey;
+
         .targets-table {
           width: 100%;
           td {
